added a few latest contributions (imx, uist, cscw, assets, and journal paper)

--- a/papers/kumar2022tourgether/index.html
+++ b/papers/kumar2022tourgether/index.html
@@ -4,7 +4,7 @@
 -->
 <html>
 	<head>
-		<title> Flavor-Videos: Enhancing the Flavor Perception of Food while Eating with Videos </title>
+		<title> Tourgether360: Collaborative Exploration of 360 Tour Videos using Pseudo-Spatial Navigation</title>
 		<meta http-equiv="content-type" content="text/html; charset=utf-8" />
 		<meta name="description" content="" />
 		<meta name="keywords" content="" />
@@ -76,19 +76,17 @@
 				<div class="9u skel-cell-important">
 					<div id="content">
 						<!-- Content -->
-						<h1 style="margin: 0 0 0.5em 0"> Flavor-Videos: Enhancing the Flavor Perception of Food while Eating with Videos </h1>
+						<h1 style="margin: 0 0 0.5em 0"> Tourgether360: Collaborative Exploration of 360 Tour Videos using Pseudo-Spatial Navigation</h1>
 
 <p style="margin: 0.5em 0 1em 0">
-<span id="james2022flavorvideos">Meetha Nesam James, Nimesha Ranasinghe, Anthony Tang, and Lora Oehlberg. (2022). <span style="text-decoration: underline"> Flavor-Videos: Enhancing the Flavor Perception of Food while Eating with Videos </span>. In <i>IMX 2022: ACM International Conference on Interactive Media Experiences</i>.</span>
+<span id="kumar2022tourgether">Kartikaeya Kumar, Lev Poretski, Jiannan Li, and Anthony Tang. (2022). <span style="text-decoration: underline"> Tourgether360: Collaborative Exploration of 360 Tour Videos using Pseudo-Spatial Navigation</span>. <i>Proceedings of the ACM on Human-Computer Interaction (PACMHCI)</i>.</span>
 
 
-
-	<small>Acceptance: 40% - 19/47.</small>
 
 </p>
 
 <h2>Abstract</h2>
-<p style="margin: 0.5em 0 1em 0">People are typically involved in different activities while eating, particularly when eating alone, such as watching television or playing games on their phones. Previous research in Human-Food Interaction (HFI) has primarily focused on studying the motivation, and analysis of the media content watched while eating. However, their impact on human behavioral and cognitive processes, particularly flavor perception and its attributes, remains underexplored. We present a user study to investigate the influence of six types of videos, including mukbang - a new food video genre, on flavor perceptions (taste sensations, liking, and emotions) while eating plain white rice. Our findings revealed that participants perceived positive emotional changes and reported significant differences in their augmented taste sensations (e.g., spicy and salty) with different food-based videos. Our findings provided insights into using our approach to promote digital commensality and healthier eating (digital augmentation without altering the food), highlighting the scope for future research.</p>
+<p style="margin: 0.5em 0 1em 0">Remote teleoperation is an important robot control method when they cannot operate fully autonomously. Yet, teleoperation presents challenges to effective and full robot utilization: controls are cumbersome, inefficient, and the teleoperator needs to actively attend to the robot and its environment. Inspired by end-user programming, we propose a new interaction paradigm to support robot teleoperation for combinations of repetitive and complex movements. We introduce Mimic, a system that allows teleoperators to demonstrate and save robot trajectories as templates, and re-use them to execute the same action in new situations. Templates can be re-used through (1) macros—parametrized templates assigned to and activated by buttons on the controller, and (2) programs—sequences of parametrized templates that operate autonomously. A user study in a simulated environment showed that after initial set up time, participants completed manipulation tasks faster and more easily compared to traditional direct control.</p>
 
 <!--
 
@@ -97,30 +95,33 @@
 <h2>Materials</h2>
 <p style="margin: 0.5em 0 1em 0">
 
-	<a href="https://hcitang.org/papers/2022-imx2022-james-flavor-videos.pdf"><i class="fa fa-file-pdf-o"></i> PDF File (https://hcitang.org/papers/2022-imx2022-james-flavor-videos.pdf)</a><br/>
+	<a href="https://hcitang.org/papers/2022-cscw2022-kumar-tourgether360.pdf"><i class="fa fa-file-pdf-o"></i> PDF File (https://hcitang.org/papers/2022-cscw2022-kumar-tourgether360.pdf)</a><br/>
 
 
-	<a href="https://imx.acm.org/2022/"><i class="fa fa-sticky-note-o"></i> URL (https://imx.acm.org/2022/)</a><br/>
+	<a href="https://uist.acm.org/2022/"><i class="fa fa-sticky-note-o"></i> URL (https://uist.acm.org/2022/)</a><br/>
 
 
+	<a href="https://hcitang.org/papers/2022-cscw2022-kumar-tourgether360.mp4"><i class="fa fa-film"></i> Video (https://hcitang.org/papers/2022-cscw2022-kumar-tourgether360.mp4)</a><br/>
 
-	<a href="http://doi.acm.org?doi=3505284.3529967"><i class="fa fa-external-link"></i> DOI (http://doi.acm.org?doi=3505284.3529967)</a><br/>
+
+	<a href=""><i class="fa fa-external-link"></i> DOI ()</a><br/>
 
 </p>
 
 
 
 <h2>BibTeX</h2>
-<p style="font-family: 'Lucida Sans Typewriter', 'Lucida Console', Monaco, 'Bitstream Vera Sans Mono', monospace; font-size: small; background-color: rgb(240,240,240); border: 2px solid; border-color: rgb(222,222,222); border-radius: 5px; margin: 0.5em 0 0 0; line-height: 1em; letter-spacing: 0em">@inproceedings{james2022flavorvideos,<br />
-&nbsp;&nbsp;author = {James, Meetha Nesam and Ranasinghe, Nimesha and Tang, Anthony and Oehlberg, Lora},<br />
-&nbsp;&nbsp;title = { Flavor-Videos: Enhancing the Flavor Perception of Food while Eating with Videos },<br />
-&nbsp;&nbsp;booktitle = {IMX 2022: ACM International Conference on Interactive Media Experiences},<br />
-&nbsp;&nbsp;pdfurl = {https://hcitang.org/papers/2022-imx2022-james-flavor-videos.pdf},<br />
+<p style="font-family: 'Lucida Sans Typewriter', 'Lucida Console', Monaco, 'Bitstream Vera Sans Mono', monospace; font-size: small; background-color: rgb(240,240,240); border: 2px solid; border-color: rgb(222,222,222); border-radius: 5px; margin: 0.5em 0 0 0; line-height: 1em; letter-spacing: 0em">@article{kumar2022tourgether,<br />
+&nbsp;&nbsp;author = {Kumar, Kartikaeya and Poretski, Lev and Li, Jiannan and Tang, Anthony},<br />
+&nbsp;&nbsp;title = { Tourgether360: Collaborative Exploration of 360 Tour Videos using Pseudo-Spatial Navigation},<br />
+&nbsp;&nbsp;journal = {Proceedings of the ACM on Human-Computer Interaction (PACMHCI)},<br />
+&nbsp;&nbsp;volume = {},<br />
+&nbsp;&nbsp;pdfurl = {https://hcitang.org/papers/2022-cscw2022-kumar-tourgether360.pdf},<br />
+&nbsp;&nbsp;videourl = {https://hcitang.org/papers/2022-cscw2022-kumar-tourgether360.mp4},<br />
 &nbsp;&nbsp;year = {2022},<br />
 &nbsp;&nbsp;type = {conference},<br />
-&nbsp;&nbsp;url = {https://imx.acm.org/2022/},<br />
-&nbsp;&nbsp;acceptance = {40% - 19/47},<br />
-&nbsp;&nbsp;doi = {http://doi.acm.org?doi=3505284.3529967}<br />
+&nbsp;&nbsp;url = {https://uist.acm.org/2022/},<br />
+&nbsp;&nbsp;doi = {}<br />
 }<br />
 </p>
 					</div>
