--- a/papers/mok2022livestreamers/index.html
+++ b/papers/mok2022livestreamers/index.html
@@ -4,7 +4,7 @@
 -->
 <html>
 	<head>
-		<title> Flavor-Videos: Enhancing the Flavor Perception of Food while Eating with Videos </title>
+		<title> Social Access and Representation for Autistic Adult Livestreamers </title>
 		<meta http-equiv="content-type" content="text/html; charset=utf-8" />
 		<meta name="description" content="" />
 		<meta name="keywords" content="" />
@@ -76,19 +76,17 @@
 				<div class="9u skel-cell-important">
 					<div id="content">
 						<!-- Content -->
-						<h1 style="margin: 0 0 0.5em 0"> Flavor-Videos: Enhancing the Flavor Perception of Food while Eating with Videos </h1>
+						<h1 style="margin: 0 0 0.5em 0"> Social Access and Representation for Autistic Adult Livestreamers </h1>
 
 <p style="margin: 0.5em 0 1em 0">
-<span id="james2022flavorvideos">Meetha Nesam James, Nimesha Ranasinghe, Anthony Tang, and Lora Oehlberg. (2022). <span style="text-decoration: underline"> Flavor-Videos: Enhancing the Flavor Perception of Food while Eating with Videos </span>. In <i>IMX 2022: ACM International Conference on Interactive Media Experiences</i>.</span>
+<span id="mok2022livestreamers">Terrance Mok, Anthony Tang, Adam McCrimmon, and Lora Oehlberg. (2022). <span style="text-decoration: underline"> Social Access and Representation for Autistic Adult Livestreamers </span>. In <i>ASSETS ’22: The 24th International ACM SIGACCESS Conference on Computers and Accessibility</i>.</span>
 
 
-
-	<small>Acceptance: 40% - 19/47.</small>
 
 </p>
 
 <h2>Abstract</h2>
-<p style="margin: 0.5em 0 1em 0">People are typically involved in different activities while eating, particularly when eating alone, such as watching television or playing games on their phones. Previous research in Human-Food Interaction (HFI) has primarily focused on studying the motivation, and analysis of the media content watched while eating. However, their impact on human behavioral and cognitive processes, particularly flavor perception and its attributes, remains underexplored. We present a user study to investigate the influence of six types of videos, including mukbang - a new food video genre, on flavor perceptions (taste sensations, liking, and emotions) while eating plain white rice. Our findings revealed that participants perceived positive emotional changes and reported significant differences in their augmented taste sensations (e.g., spicy and salty) with different food-based videos. Our findings provided insights into using our approach to promote digital commensality and healthier eating (digital augmentation without altering the food), highlighting the scope for future research.</p>
+<p style="margin: 0.5em 0 1em 0">We interviewed 10 autistic livestreamers to understand their moti- vations for livestreaming on Twitch. Our participants explained that streaming helped them fulfll social desires by: supporting them in making meaningful social connections with others; giving them a safe space to practice social skills like “small talk”; and empowering them to be autistic role models and to share their true selves. This work ofers an early report on how autistic individuals leverage livestreaming as a benefcial social platform while struggling with audience expectations.</p>
 
 <!--
 
@@ -97,30 +95,30 @@
 <h2>Materials</h2>
 <p style="margin: 0.5em 0 1em 0">
 
-	<a href="https://hcitang.org/papers/2022-imx2022-james-flavor-videos.pdf"><i class="fa fa-file-pdf-o"></i> PDF File (https://hcitang.org/papers/2022-imx2022-james-flavor-videos.pdf)</a><br/>
-
-
-	<a href="https://imx.acm.org/2022/"><i class="fa fa-sticky-note-o"></i> URL (https://imx.acm.org/2022/)</a><br/>
+	<a href=" http://hcitang.org/papers/2022-assets2022poster-mok-livestreamers.pdf"><i class="fa fa-file-pdf-o"></i> PDF File ( http://hcitang.org/papers/2022-assets2022poster-mok-livestreamers.pdf)</a><br/>
 
 
 
-	<a href="http://doi.acm.org?doi=3505284.3529967"><i class="fa fa-external-link"></i> DOI (http://doi.acm.org?doi=3505284.3529967)</a><br/>
+	<a href=" http://hcitang.org/papers/2022-assets2022poster-mok-livestreamers.mp4"><i class="fa fa-film"></i> Video ( http://hcitang.org/papers/2022-assets2022poster-mok-livestreamers.mp4)</a><br/>
+
+
+	<a href="https://doi.org/10.1145/3517428.3550400"><i class="fa fa-external-link"></i> DOI (https://doi.org/10.1145/3517428.3550400)</a><br/>
 
 </p>
 
 
 
 <h2>BibTeX</h2>
-<p style="font-family: 'Lucida Sans Typewriter', 'Lucida Console', Monaco, 'Bitstream Vera Sans Mono', monospace; font-size: small; background-color: rgb(240,240,240); border: 2px solid; border-color: rgb(222,222,222); border-radius: 5px; margin: 0.5em 0 0 0; line-height: 1em; letter-spacing: 0em">@inproceedings{james2022flavorvideos,<br />
-&nbsp;&nbsp;author = {James, Meetha Nesam and Ranasinghe, Nimesha and Tang, Anthony and Oehlberg, Lora},<br />
-&nbsp;&nbsp;title = { Flavor-Videos: Enhancing the Flavor Perception of Food while Eating with Videos },<br />
-&nbsp;&nbsp;booktitle = {IMX 2022: ACM International Conference on Interactive Media Experiences},<br />
-&nbsp;&nbsp;pdfurl = {https://hcitang.org/papers/2022-imx2022-james-flavor-videos.pdf},<br />
+<p style="font-family: 'Lucida Sans Typewriter', 'Lucida Console', Monaco, 'Bitstream Vera Sans Mono', monospace; font-size: small; background-color: rgb(240,240,240); border: 2px solid; border-color: rgb(222,222,222); border-radius: 5px; margin: 0.5em 0 0 0; line-height: 1em; letter-spacing: 0em">@inproceedings{mok2022livestreamers,<br />
+&nbsp;&nbsp;author = {Mok, Terrance and Tang, Anthony and McCrimmon, Adam and Oehlberg, Lora},<br />
+&nbsp;&nbsp;title = { Social Access and Representation for Autistic Adult Livestreamers },<br />
+&nbsp;&nbsp;booktitle = {ASSETS '22: The 24th International ACM SIGACCESS Conference on Computers and Accessibility},<br />
+&nbsp;&nbsp;editor = {},<br />
+&nbsp;&nbsp;pdfurl = { http://hcitang.org/papers/2022-assets2022poster-mok-livestreamers.pdf},<br />
+&nbsp;&nbsp;videourl = { http://hcitang.org/papers/2022-assets2022poster-mok-livestreamers.mp4},<br />
 &nbsp;&nbsp;year = {2022},<br />
-&nbsp;&nbsp;type = {conference},<br />
-&nbsp;&nbsp;url = {https://imx.acm.org/2022/},<br />
-&nbsp;&nbsp;acceptance = {40% - 19/47},<br />
-&nbsp;&nbsp;doi = {http://doi.acm.org?doi=3505284.3529967}<br />
+&nbsp;&nbsp;type = {poster},<br />
+&nbsp;&nbsp;doi = {https://doi.org/10.1145/3517428.3550400}<br />
 }<br />
 </p>
 					</div>
