update for SMU and a bunch of papers

--- a/about-us/index.html
+++ b/about-us/index.html
@@ -70,7 +70,9 @@
   <li><strong>Electronic fashion.</strong> We explore the design of new technologies that enable electronic fashion, and study how electronic fashion can be used for new forms of expressive communication.</li>
 </ul>
 
-<p>We are part of the <a href="http://ischool.utoronto.ca/">Faculty of Information</a> in the <a href="http://www.utoronto.ca/">University of Toronto</a> located in Toronto, Ontario, Canada.</p>
+<p>We are located in the <a href="https://scis.smu.edu.sg/">School of Computer and Information Systems</a> at the <a href="https://smu.edu.sg/">Singapore Management University</a>.</p>
+
+<!-- We are part of the [Faculty of Information](http://ischool.utoronto.ca/) in the [University of Toronto](http://www.utoronto.ca/) located in Toronto, Ontario, Canada.-->
 
 					</article>
 		
