--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
 							<i class="icon major fa-info"></i>
 							<h3>About Us</h3>
 						</a>
-						<p>We are located in Toronto, Canada.</p>
+						<p>We are located in Singapore.</p>
 					</div>
 				</section>
 				<section class="4u">
