--- a/join-us/index.html
+++ b/join-us/index.html
@@ -66,7 +66,7 @@
 
 <p>Take a look at our <a href="/projects">Research Projects</a> to get a sense for our research interests, and see if you fit in. If you are an undergrad, take a gander at some of our <a href="/undergrad-research-projects">Undergrad Research Projects</a> to see what is available.</p>
 
-<p>If these things seem interesting, feel free to <a href="mailto:tonyt@ucalgary.ca?subject=World Domination">fire us an email</a>. Include the following (I will not review anything without all four items):</p>
+<p>If these things seem interesting, feel free to <a href="mailto:tonyt@smu.edu.sg?subject=World Domination">fire us an email</a>. Include the following (I will not review anything without all four items):</p>
 
 <ul>
   <li>A good knock knock joke</li>
