--- a/papers/feick2023handredirection/index.html
+++ b/papers/feick2023handredirection/index.html
@@ -4,7 +4,7 @@
 -->
 <html>
 	<head>
-		<title> Flavor-Videos: Enhancing the Flavor Perception of Food while Eating with Videos </title>
+		<title>Investigating Noticeable Hand Redirection in Virtual Reality using Physiological and Interaction Data</title>
 		<meta http-equiv="content-type" content="text/html; charset=utf-8" />
 		<meta name="description" content="" />
 		<meta name="keywords" content="" />
@@ -76,19 +76,17 @@
 				<div class="9u skel-cell-important">
 					<div id="content">
 						<!-- Content -->
-						<h1 style="margin: 0 0 0.5em 0"> Flavor-Videos: Enhancing the Flavor Perception of Food while Eating with Videos </h1>
+						<h1 style="margin: 0 0 0.5em 0">Investigating Noticeable Hand Redirection in Virtual Reality using Physiological and Interaction Data</h1>
 
 <p style="margin: 0.5em 0 1em 0">
-<span id="james2022flavorvideos">Meetha Nesam James, Nimesha Ranasinghe, Anthony Tang, and Lora Oehlberg. (2022). <span style="text-decoration: underline"> Flavor-Videos: Enhancing the Flavor Perception of Food while Eating with Videos </span>. In <i>IMX 2022: ACM International Conference on Interactive Media Experiences</i>.</span>
+<span id="feick2023handredirection">Martin Feick, Kora Persephone Regitz, Anthony Tang, Tobias Jungbluth, Maurice Rekrut, and Antonio Krüger. (2023). <span style="text-decoration: underline">Investigating Noticeable Hand Redirection in Virtual Reality using Physiological and Interaction Data</span>. In <i>IEEE VR ’23: IEEE Conference on Virtual Reality and 3D User Interfaces</i>.</span>
 
 
-
-	<small>Acceptance: 40% - 19/47.</small>
 
 </p>
 
 <h2>Abstract</h2>
-<p style="margin: 0.5em 0 1em 0">People are typically involved in different activities while eating, particularly when eating alone, such as watching television or playing games on their phones. Previous research in Human-Food Interaction (HFI) has primarily focused on studying the motivation, and analysis of the media content watched while eating. However, their impact on human behavioral and cognitive processes, particularly flavor perception and its attributes, remains underexplored. We present a user study to investigate the influence of six types of videos, including mukbang - a new food video genre, on flavor perceptions (taste sensations, liking, and emotions) while eating plain white rice. Our findings revealed that participants perceived positive emotional changes and reported significant differences in their augmented taste sensations (e.g., spicy and salty) with different food-based videos. Our findings provided insights into using our approach to promote digital commensality and healthier eating (digital augmentation without altering the food), highlighting the scope for future research.</p>
+<p style="margin: 0.5em 0 1em 0">Hand redirection is effective so long as the introduced offsets are not noticeably disruptive to users. In this work we investigate the use of physiological and interaction data to detect movement discrepancies between a user’s real and virtual hand, pushing towards a novel approach to identify discrepancies which are too large and therefore, can be noticed. We ran a study with 22 participants, collecting EEG, ECG, EDA, RSP, and interaction data. Our results suggest that EEG and interaction data can be reliably used to detect visuo-motor discrepancies, whereas ECG and RSP seem to suffer from inconsistencies. Our findings also show that participants quickly adapt to large discrepancies, and that they constantly attempt to establish a stable mental model of their environment. Together, these findings suggest that there is no absolute threshold for possible non-detectable discrepancies; but instead, it primarily relates to participants most recent experience with this kind of interaction.</p>
 
 <!--
 
@@ -97,30 +95,23 @@
 <h2>Materials</h2>
 <p style="margin: 0.5em 0 1em 0">
 
-	<a href="https://hcitang.org/papers/2022-imx2022-james-flavor-videos.pdf"><i class="fa fa-file-pdf-o"></i> PDF File (https://hcitang.org/papers/2022-imx2022-james-flavor-videos.pdf)</a><br/>
-
-
-	<a href="https://imx.acm.org/2022/"><i class="fa fa-sticky-note-o"></i> URL (https://imx.acm.org/2022/)</a><br/>
 
 
 
-	<a href="http://doi.acm.org?doi=3505284.3529967"><i class="fa fa-external-link"></i> DOI (http://doi.acm.org?doi=3505284.3529967)</a><br/>
+	<a href=""><i class="fa fa-external-link"></i> DOI ()</a><br/>
 
 </p>
 
 
 
 <h2>BibTeX</h2>
-<p style="font-family: 'Lucida Sans Typewriter', 'Lucida Console', Monaco, 'Bitstream Vera Sans Mono', monospace; font-size: small; background-color: rgb(240,240,240); border: 2px solid; border-color: rgb(222,222,222); border-radius: 5px; margin: 0.5em 0 0 0; line-height: 1em; letter-spacing: 0em">@inproceedings{james2022flavorvideos,<br />
-&nbsp;&nbsp;author = {James, Meetha Nesam and Ranasinghe, Nimesha and Tang, Anthony and Oehlberg, Lora},<br />
-&nbsp;&nbsp;title = { Flavor-Videos: Enhancing the Flavor Perception of Food while Eating with Videos },<br />
-&nbsp;&nbsp;booktitle = {IMX 2022: ACM International Conference on Interactive Media Experiences},<br />
-&nbsp;&nbsp;pdfurl = {https://hcitang.org/papers/2022-imx2022-james-flavor-videos.pdf},<br />
-&nbsp;&nbsp;year = {2022},<br />
+<p style="font-family: 'Lucida Sans Typewriter', 'Lucida Console', Monaco, 'Bitstream Vera Sans Mono', monospace; font-size: small; background-color: rgb(240,240,240); border: 2px solid; border-color: rgb(222,222,222); border-radius: 5px; margin: 0.5em 0 0 0; line-height: 1em; letter-spacing: 0em">@inproceedings{feick2023handredirection,<br />
+&nbsp;&nbsp;author = {Feick, Martin and Regitz, Kora Persephone and Tang, Anthony and Jungbluth, Tobias and Rekrut, Maurice and Krüger, Antonio},<br />
+&nbsp;&nbsp;title = {Investigating Noticeable Hand Redirection in Virtual Reality using Physiological and Interaction Data},<br />
+&nbsp;&nbsp;booktitle = {IEEE VR '23: IEEE Conference on Virtual Reality and 3D User Interfaces},<br />
+&nbsp;&nbsp;year = {2023},<br />
 &nbsp;&nbsp;type = {conference},<br />
-&nbsp;&nbsp;url = {https://imx.acm.org/2022/},<br />
-&nbsp;&nbsp;acceptance = {40% - 19/47},<br />
-&nbsp;&nbsp;doi = {http://doi.acm.org?doi=3505284.3529967}<br />
+&nbsp;&nbsp;doi = {}<br />
 }<br />
 </p>
 					</div>
