--- a/papers/index.html
+++ b/papers/index.html
@@ -73,6 +73,8 @@
 			<h3>Jump to...</h3>
 			
 			
+			<a href="#2023">2023</a>&nbsp;&nbsp;&nbsp;
+			
 			<a href="#2022">2022</a>&nbsp;&nbsp;&nbsp;
 			
 			<a href="#2021">2021</a>&nbsp;&nbsp;&nbsp;
@@ -119,6 +121,40 @@
 					<div id="content">
 						<!-- Content -->
 						
+<h1><a name="2023"></a>2023</h1>
+<ol class="bibliography"><li><section id="citation">
+    <a href="/papers/feick2023handredirection"><span id="feick2023handredirection">Martin Feick, Kora Persephone Regitz, Anthony Tang, Tobias Jungbluth, Maurice Rekrut, and Antonio Krüger. (2023). <span style="text-decoration: underline">Investigating Noticeable Hand Redirection in Virtual Reality using Physiological and Interaction Data</span>. In <i>IEEE VR ’23: IEEE Conference on Virtual Reality and 3D User Interfaces</i>.</span>
+
+(conference).</a><br />
+
+
+
+
+
+
+
+	<a href=""><i class="fa fa-external-link"></i></a>
+
+</section><a class="details" href="/papers/feick2023handredirection/"><!-- --></a></li>
+<li><section id="citation">
+    <a href="/papers/pratte2023designspace"><span id="pratte2023designspace">Sydney Pratte, Anthony Tang, Shannon Hoover, Maria Elana Hoover, Matt Laprairie, Catherine Larose, and Lora Oehlberg. (2023). <span style="text-decoration: underline"> Towards a Design Space for Storytelling on the Fashion Technology Runway </span>. In <i>TEI ’23: Seventeeth International Conference on Tangible, Embedded and Embodied Interaction</i>.</span>
+
+(conference).</a><br />
+
+
+
+
+	<a href=" http://hcitang.org/papers/2023-tei2023-pratte-fashiontech-design-space.pdf "><i class="fa fa-file-pdf-o"></i></a>
+
+
+	<a href=" http://hcitang.org/papers/2023-tei2023-pratte-fashiontech-design-space-artifact-set.pdf"><i class="fa fa-sticky-note-o"></i></a>
+
+
+
+	<a href=""><i class="fa fa-external-link"></i></a>
+
+</section><a class="details" href="/papers/pratte2023designspace/"><!-- --></a></li></ol>
+
 <h1><a name="2022"></a>2022</h1>
 <ol class="bibliography"><li><section id="citation">
     <a href="/papers/labrie2022onlineteaching"><span id="labrie2022onlineteaching">Audrey Labrie, Terrance Mok, Anthony Tang, Michelle Lui, Lora Oehlberg, and Lev Poretski. (2022). <span style="text-decoration: underline">Toward Video-Conferencing Tools for Hands-On Activities in Online Teaching</span>. <i>Proceedings of the ACM on Human-Computer Interaction (PACMHCI)</i> 6, GROUP.</span>
@@ -134,6 +170,104 @@
 
 
 </section><a class="details" href="/papers/labrie2022onlineteaching/"><!-- --></a></li>
+<li><section id="citation">
+    <a href="/papers/feick2022hapticpuppet"><span id="feick2022hapticpuppet">Martin Feick, Anthony Tang, and Krug̈er. (2022). <span style="text-decoration: underline"> HapticPuppet: A Kinesthetic Mid-air Multidirectional Force-Feedback Drone-based Interface </span>. In <i>UIST ’22: The Adjunct Publication of the 35th Annual ACM Symposium on User Interface Software and Technology</i>.</span>
+
+(poster).</a><br />
+
+
+
+
+	<a href=" http://hcitang.org/papers/2022-uist2022poster-feick-hapticpuppet.pdf"><i class="fa fa-file-pdf-o"></i></a>
+
+
+
+	<a href=" http://hcitang.org/papers/2022-uist2022poster-feick-hapticpuppet.mp4"><i class="fa fa-film"></i></a>
+
+
+	<a href="https://doi.org/ 10.1145/3526114.3558694"><i class="fa fa-external-link"></i></a>
+
+</section><a class="details" href="/papers/feick2022hapticpuppet/"><!-- --></a></li>
+<li><section id="citation">
+    <a href="/papers/kumar2022tourgether"><span id="kumar2022tourgether">Kartikaeya Kumar, Lev Poretski, Jiannan Li, and Anthony Tang. (2022). <span style="text-decoration: underline"> Tourgether360: Collaborative Exploration of 360 Tour Videos using Pseudo-Spatial Navigation</span>. <i>Proceedings of the ACM on Human-Computer Interaction (PACMHCI)</i>.</span>
+
+(conference).</a><br />
+
+
+
+
+	<a href="https://hcitang.org/papers/2022-cscw2022-kumar-tourgether360.pdf"><i class="fa fa-file-pdf-o"></i></a>
+
+
+	<a href="https://uist.acm.org/2022/"><i class="fa fa-sticky-note-o"></i></a>
+
+
+	<a href="https://hcitang.org/papers/2022-cscw2022-kumar-tourgether360.mp4"><i class="fa fa-film"></i></a>
+
+
+	<a href=""><i class="fa fa-external-link"></i></a>
+
+</section><a class="details" href="/papers/kumar2022tourgether/"><!-- --></a></li>
+<li><section id="citation">
+    <a href="/papers/mahadevan2022mimic"><span id="mahadevan2022mimic">Karthik Mahadevan, Yan Chen, Maya Cakmak, Anthony Tang, and Tovi Grossman. (2022). <span style="text-decoration: underline"> Mimic: In-Situ Recording and Re-Use of Demonstrations to Support Robot Teleoperation</span>. In <i>UIST 2022: The 35th Annual ACM Symposium on User Interface Software and Technology</i>.</span>
+
+(conference).</a><br />
+
+
+
+
+	<a href="https://hcitang.org/papers/2022-uist2022-mahedevan-mimic.pdf"><i class="fa fa-file-pdf-o"></i></a>
+
+
+	<a href="https://uist.acm.org/2022/"><i class="fa fa-sticky-note-o"></i></a>
+
+
+	<a href="https://hcitang.org/papers/2022-uist2022-mahedevan-mimic.mp4"><i class="fa fa-film"></i></a>
+
+
+	<a href="https://doi.org/10.1145/3526113.3545639"><i class="fa fa-external-link"></i></a>
+
+</section><a class="details" href="/papers/mahadevan2022mimic/"><!-- --></a></li>
+<li><section id="citation">
+    <a href="/papers/sin2022inclusivity"><span id="sin2022inclusivity">Jaisie Sin, Cosmin Munteanu, Michael Nixon, Velian Pandeliev, Garreth Tigwell, Kristen Shinohara, Anthony Tang, and Steve Szigeti. (2022). <span style="text-decoration: underline">Uncovering Inclusivity Gaps in Design Pedagogy through the Digital Design Marginalization Framework</span>. <i>Frontiers in Computer Science (Digital Education)</i>.</span>
+
+(journal).</a><br />
+
+
+
+
+	<a href="http://hcitang.org/papers/2022-sin-inclusivity.pdf"><i class="fa fa-file-pdf-o"></i></a>
+
+
+	<a href="https://www.frontiersin.org/articles/10.3389/fcomp.2022.822090/"><i class="fa fa-sticky-note-o"></i></a>
+
+
+
+	<a href="https://doi.org/10.3389/fcomp.2022.822090"><i class="fa fa-external-link"></i></a>
+
+</section><a class="details" href="/papers/sin2022inclusivity/"><!-- --></a></li>
+<li><section id="citation">
+    <a href="/papers/james2022flavorvideos"><span id="james2022flavorvideos">Meetha Nesam James, Nimesha Ranasinghe, Anthony Tang, and Lora Oehlberg. (2022). <span style="text-decoration: underline"> Flavor-Videos: Enhancing the Flavor Perception of Food while Eating with Videos </span>. In <i>IMX 2022: ACM International Conference on Interactive Media Experiences</i>.</span>
+
+(conference).</a><br />
+
+	<small>Acceptance: 40% - 19/47.</small>
+
+
+
+	<br />
+
+
+	<a href="https://hcitang.org/papers/2022-imx2022-james-flavor-videos.pdf"><i class="fa fa-file-pdf-o"></i></a>
+
+
+	<a href="https://imx.acm.org/2022/"><i class="fa fa-sticky-note-o"></i></a>
+
+
+
+	<a href="http://doi.acm.org?doi=3505284.3529967"><i class="fa fa-external-link"></i></a>
+
+</section><a class="details" href="/papers/james2022flavorvideos/"><!-- --></a></li>
 <li><section id="citation">
     <a href="/papers/pratte2022nlitenworkshop"><span id="pratte2022nlitenworkshop">Sydney Pratte, Shannon Hoover, Anthony Tang, and Lora Oehlberg. (2022). <span style="text-decoration: underline"> nLITEn: A Wearables Toolkit for Enabling Creativity in Fashion Technology Design </span>. In <i>CHI22 Workshop: Toolkits &amp; Wearables - Developing Toolkits for Exploring Wearable Designs</i>.</span>
 
@@ -275,25 +409,23 @@
 
 </section><a class="details" href="/papers/jones2022rescuecastr/"><!-- --></a></li>
 <li><section id="citation">
-    <a href="/papers/james2022flavorvideos"><span id="james2022flavorvideos">Meetha Nesam James, Nimesha Ranasinghe, Anthony Tang, and Lora Oehlberg. (2022). <span style="text-decoration: underline"> Flavor-Videos: Enhancing the Flavor Perception of Food while Eating with Videos </span>. In <i>IMX 2022: ACM International Conference on Interactive Media Experiences</i>.</span>
+    <a href="/papers/mok2022livestreamers"><span id="mok2022livestreamers">Terrance Mok, Anthony Tang, Adam McCrimmon, and Lora Oehlberg. (2022). <span style="text-decoration: underline"> Social Access and Representation for Autistic Adult Livestreamers </span>. In <i>ASSETS ’22: The 24th International ACM SIGACCESS Conference on Computers and Accessibility</i>.</span>
 
-(conference).</a><br />
-
-	<small>Acceptance: 40% - 19/47.</small>
+(poster).</a><br />
 
 
 
-	<br />
 
-
-	<a href=""><i class="fa fa-file-pdf-o"></i></a>
-
-
-	<a href="https://imx.acm.org/2022/"><i class="fa fa-sticky-note-o"></i></a>
+	<a href=" http://hcitang.org/papers/2022-assets2022poster-mok-livestreamers.pdf"><i class="fa fa-file-pdf-o"></i></a>
 
 
 
-</section><a class="details" href="/papers/james2022flavorvideos/"><!-- --></a></li></ol>
+	<a href=" http://hcitang.org/papers/2022-assets2022poster-mok-livestreamers.mp4"><i class="fa fa-film"></i></a>
+
+
+	<a href="https://doi.org/10.1145/3517428.3550400"><i class="fa fa-external-link"></i></a>
+
+</section><a class="details" href="/papers/mok2022livestreamers/"><!-- --></a></li></ol>
 
 <h1><a name="2021"></a>2021</h1>
 <ol class="bibliography"><li><section id="citation">
