--- a/papers/pratte2023designspace/index.html
+++ b/papers/pratte2023designspace/index.html
@@ -4,7 +4,7 @@
 -->
 <html>
 	<head>
-		<title> Flavor-Videos: Enhancing the Flavor Perception of Food while Eating with Videos </title>
+		<title> Towards a Design Space for Storytelling on the Fashion Technology Runway </title>
 		<meta http-equiv="content-type" content="text/html; charset=utf-8" />
 		<meta name="description" content="" />
 		<meta name="keywords" content="" />
@@ -76,19 +76,17 @@
 				<div class="9u skel-cell-important">
 					<div id="content">
 						<!-- Content -->
-						<h1 style="margin: 0 0 0.5em 0"> Flavor-Videos: Enhancing the Flavor Perception of Food while Eating with Videos </h1>
+						<h1 style="margin: 0 0 0.5em 0"> Towards a Design Space for Storytelling on the Fashion Technology Runway </h1>
 
 <p style="margin: 0.5em 0 1em 0">
-<span id="james2022flavorvideos">Meetha Nesam James, Nimesha Ranasinghe, Anthony Tang, and Lora Oehlberg. (2022). <span style="text-decoration: underline"> Flavor-Videos: Enhancing the Flavor Perception of Food while Eating with Videos </span>. In <i>IMX 2022: ACM International Conference on Interactive Media Experiences</i>.</span>
+<span id="pratte2023designspace">Sydney Pratte, Anthony Tang, Shannon Hoover, Maria Elana Hoover, Matt Laprairie, Catherine Larose, and Lora Oehlberg. (2023). <span style="text-decoration: underline"> Towards a Design Space for Storytelling on the Fashion Technology Runway </span>. In <i>TEI ’23: Seventeeth International Conference on Tangible, Embedded and Embodied Interaction</i>.</span>
 
 
-
-	<small>Acceptance: 40% - 19/47.</small>
 
 </p>
 
 <h2>Abstract</h2>
-<p style="margin: 0.5em 0 1em 0">People are typically involved in different activities while eating, particularly when eating alone, such as watching television or playing games on their phones. Previous research in Human-Food Interaction (HFI) has primarily focused on studying the motivation, and analysis of the media content watched while eating. However, their impact on human behavioral and cognitive processes, particularly flavor perception and its attributes, remains underexplored. We present a user study to investigate the influence of six types of videos, including mukbang - a new food video genre, on flavor perceptions (taste sensations, liking, and emotions) while eating plain white rice. Our findings revealed that participants perceived positive emotional changes and reported significant differences in their augmented taste sensations (e.g., spicy and salty) with different food-based videos. Our findings provided insights into using our approach to promote digital commensality and healthier eating (digital augmentation without altering the food), highlighting the scope for future research.</p>
+<p style="margin: 0.5em 0 1em 0">Fashion is driven by a narrative, i.e. a story or idea that the designer wants to convey to the audience. Fashion- tech now adds another dimension to this narrative through dynamically changing aspects of the garments. Many factors of presentation in a runway show affect how fashion-tech garments communicate a story to the audience. In this pictorial, we review a set of twenty- eight storytelling fashion-tech garments. We identify, catalogue, and categorize the factors designers used to convey stories to the audience from the runway. The design space consists of three levels: (1) the artifact- level, (2) the viewer-level, and (3) the context-level. The design space addresses how designers show their story through fashion-tech garments and how audience members see and know those messages. Our work contributes a list of considerations that fashion-tech designers must address early in their design process to effectively convey their story during a runway show presentation.</p>
 
 <!--
 
@@ -97,30 +95,29 @@
 <h2>Materials</h2>
 <p style="margin: 0.5em 0 1em 0">
 
-	<a href="https://hcitang.org/papers/2022-imx2022-james-flavor-videos.pdf"><i class="fa fa-file-pdf-o"></i> PDF File (https://hcitang.org/papers/2022-imx2022-james-flavor-videos.pdf)</a><br/>
+	<a href=" http://hcitang.org/papers/2023-tei2023-pratte-fashiontech-design-space.pdf "><i class="fa fa-file-pdf-o"></i> PDF File ( http://hcitang.org/papers/2023-tei2023-pratte-fashiontech-design-space.pdf )</a><br/>
 
 
-	<a href="https://imx.acm.org/2022/"><i class="fa fa-sticky-note-o"></i> URL (https://imx.acm.org/2022/)</a><br/>
+	<a href=" http://hcitang.org/papers/2023-tei2023-pratte-fashiontech-design-space-artifact-set.pdf"><i class="fa fa-sticky-note-o"></i> URL ( http://hcitang.org/papers/2023-tei2023-pratte-fashiontech-design-space-artifact-set.pdf)</a><br/>
 
 
 
-	<a href="http://doi.acm.org?doi=3505284.3529967"><i class="fa fa-external-link"></i> DOI (http://doi.acm.org?doi=3505284.3529967)</a><br/>
+	<a href=""><i class="fa fa-external-link"></i> DOI ()</a><br/>
 
 </p>
 
 
 
 <h2>BibTeX</h2>
-<p style="font-family: 'Lucida Sans Typewriter', 'Lucida Console', Monaco, 'Bitstream Vera Sans Mono', monospace; font-size: small; background-color: rgb(240,240,240); border: 2px solid; border-color: rgb(222,222,222); border-radius: 5px; margin: 0.5em 0 0 0; line-height: 1em; letter-spacing: 0em">@inproceedings{james2022flavorvideos,<br />
-&nbsp;&nbsp;author = {James, Meetha Nesam and Ranasinghe, Nimesha and Tang, Anthony and Oehlberg, Lora},<br />
-&nbsp;&nbsp;title = { Flavor-Videos: Enhancing the Flavor Perception of Food while Eating with Videos },<br />
-&nbsp;&nbsp;booktitle = {IMX 2022: ACM International Conference on Interactive Media Experiences},<br />
-&nbsp;&nbsp;pdfurl = {https://hcitang.org/papers/2022-imx2022-james-flavor-videos.pdf},<br />
-&nbsp;&nbsp;year = {2022},<br />
+<p style="font-family: 'Lucida Sans Typewriter', 'Lucida Console', Monaco, 'Bitstream Vera Sans Mono', monospace; font-size: small; background-color: rgb(240,240,240); border: 2px solid; border-color: rgb(222,222,222); border-radius: 5px; margin: 0.5em 0 0 0; line-height: 1em; letter-spacing: 0em">@inproceedings{pratte2023designspace,<br />
+&nbsp;&nbsp;author = {Pratte, Sydney and Tang, Anthony and Hoover, Shannon and Hoover, Maria Elana and Laprairie, Matt and Larose, Catherine and Oehlberg, Lora},<br />
+&nbsp;&nbsp;title = { Towards a Design Space for Storytelling on the Fashion Technology Runway },<br />
+&nbsp;&nbsp;booktitle = {TEI '23: Seventeeth International Conference on Tangible, Embedded and Embodied Interaction},<br />
+&nbsp;&nbsp;pdfurl = { http://hcitang.org/papers/2023-tei2023-pratte-fashiontech-design-space.pdf },<br />
+&nbsp;&nbsp;url = { http://hcitang.org/papers/2023-tei2023-pratte-fashiontech-design-space-artifact-set.pdf},<br />
+&nbsp;&nbsp;year = {2023},<br />
 &nbsp;&nbsp;type = {conference},<br />
-&nbsp;&nbsp;url = {https://imx.acm.org/2022/},<br />
-&nbsp;&nbsp;acceptance = {40% - 19/47},<br />
-&nbsp;&nbsp;doi = {http://doi.acm.org?doi=3505284.3529967}<br />
+&nbsp;&nbsp;doi = {}<br />
 }<br />
 </p>
 					</div>
